[package]
name = "ferris-files"
version = "0.1.0"
authors = ["John Harrington"]
edition = "2021"
description = "A CLI to find large files"
repository = "https://github.com/harr1424/ferris-files"
readme = "README.md"
license = "MIT"
keywords = ["filesystem", "utility"]


[dependencies]
filesize = "0.2.0"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
